# bigdata_cert

./: .gitignore  main.py  pyproject.toml
part1/ch1/: ch1_python.ipynb
part1/ch2/: ch2_pandas.ipynb
part1/ch3/: ch3_ex_type1.ipynb
part2/ch2/: ch2_classification.ipynb
part2/ch3/: ch3_metrics.ipynb
part2/ch4/: ch4_regression.ipynb
part2/ch5/: ch5_multi_class_classification.ipynb
part2/ch6/: ch6_ex_classification.ipynb
part2/ch7/: ch7_ex_multi_class_classification.ipynb
part2/ch8/: ch8_ex_regression.ipynb
part3/ch1/: ch1_hypothesis_testing.ipynb
part3/ch2/: ch2_anova.ipynb
part3/ch3/: ch3_chi_square.ipynb
part3/ch4/: ch4_linear_regression.ipynb
part3/ch5/: ch5_logistic_regression.ipynb
part3/ch6/: ch6_ex_type3.ipynb
part4/ch2/: p2_type1.ipynb  p2_type2.ipynb
part4/ch3/: p3_type1.ipynb  p3_type2.ipynb
part4/ch4/: p4_type1.ipynb  p4_type2.ipynb
part4/ch5/: p5_type1.ipynb  p5_type2.ipynb
part4/ch6/: p6_type1.ipynb  p6_type2.ipynb  p6_type3.ipynb
part4/ch7/: p7_type1.ipynb  p7_type2.ipynb  p7_type3.ipynb
part4/ch8/: p8_type1.ipynb  p8_type2.ipynb  p8_type3.ipynb
part4/ch9/: p9_type1.ipynb  p9_type2.ipynb  p9_type3.ipynb
